# adk-playground

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  example_request.yml  feature_request.yml
.github/workflows/: deploy.yml
docs_examples/agents/graph_agent_test/: Cargo.toml
docs_examples/agents/llm_agent_test/src/: complete_example.rs  multi_tools.rs  structured_output.rs
docs_examples/agents/multi_agent_test/: Cargo.toml
docs_examples/agents/workflow_test/src/: conditional_router.rs
docs_examples/callbacks/callbacks_test/: Cargo.toml
docs_examples/cli/cli_test/: Cargo.toml
docs_examples/cli/cli_test/src/: basic.rs
docs_examples/coding/cli_launcher_test/: Cargo.toml
docs_examples/coding/cli_launcher_test/src/: modes.rs
docs_examples/coding/code_test/src/: tool.rs  types.rs
docs_examples/deployment/launcher_test/: Cargo.toml
docs_examples/eval/eval_readme_test/: Cargo.toml
docs_examples/eval/eval_readme_test/src/: basic.rs
docs_examples/evaluation/eval_test/src/: basic.rs  trajectory.rs
docs_examples/events/events_test/: Cargo.toml
docs_examples/extensions/plugins_test/src/: basic.rs  builder.rs
docs_examples/extensions/skills_test/src/: discovery.rs  injection.rs
docs_examples/graph/graph_readme_test/: Cargo.toml
docs_examples/graph/graph_readme_test/src/: basic.rs
docs_examples/observability/telemetry_test/: Cargo.toml
docs_examples/readme_validation/: Cargo.toml
docs_examples/readme_validation/src/: deepseek_basic.rs
docs_examples/security/auth_test/src/: basic.rs
docs_examples/security/guardrails_test/: Cargo.toml
docs_examples/tools/browser_test/: Cargo.toml
docs_examples/tools/function_tools_test/: Cargo.toml
docs_examples/tools/rag_test/src/: chunkers.rs
docs_examples/tools/rag_usecases_test/src/: agent_tool.rs  custom_embedder.rs
docs_examples/tools/ui_test/: Cargo.toml
legacy-docs_examples/agents/llm_agent_test/: Cargo.toml
legacy-docs_examples/agents/llm_agent_test/src/: basic_agent.rs  main.rs  shaped_behavior.rs
legacy-docs_examples/agents/realtime_agent_test/: Cargo.toml
legacy-docs_examples/agents/workflow_test/: Cargo.toml
legacy-docs_examples/artifacts/artifacts_test/: Cargo.toml
legacy-docs_examples/artifacts/artifacts_test/src/: basic.rs  scoped.rs
legacy-docs_examples/coding/cli_launcher_test/src/: serve.rs
legacy-docs_examples/coding/code_test/: Cargo.toml
legacy-docs_examples/coding/code_test/src/: sandbox.rs
legacy-docs_examples/core/core_test/: Cargo.toml
legacy-docs_examples/core/runner_test/: Cargo.toml
legacy-docs_examples/deployment/a2a_test/: Cargo.toml
legacy-docs_examples/evaluation/eval_test/: Cargo.toml
legacy-docs_examples/extensions/plugins_test/: Cargo.toml
legacy-docs_examples/extensions/skills_test/: Cargo.toml
legacy-docs_examples/extensions/skills_test/src/: coordinator.rs
legacy-docs_examples/guardrail/guardrail_readme_test/: Cargo.toml
legacy-docs_examples/guardrail/guardrail_readme_test/src/: basic.rs
legacy-docs_examples/models/mistralrs_test/: Cargo.toml
legacy-docs_examples/models/providers_test/: Cargo.toml
legacy-docs_examples/quickstart_test/: Cargo.toml
legacy-docs_examples/quickstart_test/src/: main.rs
legacy-docs_examples/readme_validation/src/: gemini_basic.rs  groq_basic.rs  ollama_basic.rs  realtime_snippet.rs
legacy-docs_examples/realtime/realtime_readme_test/: Cargo.toml
legacy-docs_examples/realtime/realtime_readme_test/src/: basic.rs
legacy-docs_examples/security/auth_test/: Cargo.toml
legacy-docs_examples/security/guardrails_test/src/: basic.rs
legacy-docs_examples/security/memory_test/: Cargo.toml
legacy-docs_examples/sessions/sessions_test/: Cargo.toml
legacy-docs_examples/sessions/sessions_test/src/: state_example.rs  state_scopes.rs
legacy-docs_examples/studio/studio_test/: Cargo.toml
legacy-docs_examples/tools/builtin_test/: Cargo.toml
legacy-docs_examples/tools/mcp_test/: Cargo.toml
legacy-docs_examples/tools/rag_test/: Cargo.toml
legacy-docs_examples/tools/rag_test/src/: config.rs  pipeline.rs  reranker.rs
legacy-docs_examples/tools/rag_usecases_test/: Cargo.toml
legacy-docs_examples/tools/rag_usecases_test/src/: hybrid_search.rs  markdown_docs.rs  multi_collection.rs
legacy-examples/: Cargo.toml
legacy-examples/docs_translator/: Cargo.toml
legacy-examples/eval_basic/: main.rs
legacy-examples/function_tool/: main.rs
legacy-examples/sequential/: main.rs
playground/: docker-compose.yml  r_at.json
playground/backend/: Cargo.toml
playground/backend/examples/: action_http_merge.rs  action_set_transform.rs  action_switch_loop.rs  action_workflow.rs  agent_tool.rs  anthropic_caching.rs  anthropic_multi_tool.rs  anthropic_quickstart.rs  anthropic_streaming.rs  anthropic_structured.rs  anthropic_thinking_graph.rs  anthropic_token_counting.rs  anthropic_vision.rs  artifact_agent.rs  auth_audit.rs  auth_identity.rs  auth_rbac.rs  auth_sso.rs  azure_ai_quickstart.rs  bedrock_quickstart.rs  builtin_anthropic.rs  builtin_gemini.rs  builtin_openai.rs  callbacks_guardrails.rs  callbacks_logging.rs  cli_launcher.rs  code_execution.rs  competitive_auto_provider.rs  competitive_graph_resume.rs  competitive_tool_search.rs  conditional_router.rs  customer_service.rs  deepseek_quickstart.rs  function_tool.rs  gemini_live_context.rs  gemini_live_tools.rs  graph_conditional.rs  graph_workflow.rs  guardrails_advanced.rs  loop_workflow.rs  (+34 more)
playground/backend/src/: examples.rs  main.rs
playground/deploy/: README.md  cloudformation.yaml  deploy.sh  deployer-policy.json
playground/frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
playground/frontend/src/: App.css  App.tsx
