[workspace]
resolver = "2"
members = [
    "legacy-examples",
    "legacy-examples/audio",
    "legacy-examples/ralph",
    "legacy-examples/postgres_session",
    "legacy-examples/redis_session",
    "legacy-examples/mongodb_session",
    "legacy-examples/neo4j_session",
    "legacy-examples/sqlite_memory",
    "legacy-docs_examples/quickstart_test",
    "legacy-docs_examples/agents/llm_agent_test",
    "legacy-docs_examples/agents/graph_agent_test",
    "legacy-docs_examples/agents/multi_agent_test",
    "legacy-docs_examples/agents/realtime_agent_test",
    "legacy-docs_examples/agents/workflow_test",
    "legacy-docs_examples/tools/mcp_test",
    "legacy-docs_examples/tools/rag_test",
    "legacy-docs_examples/tools/browser_test",
    "legacy-docs_examples/tools/builtin_test",
    "legacy-docs_examples/tools/function_tools_test",
    "legacy-docs_examples/tools/ui_test",
    "legacy-docs_examples/sessions/sessions_test",
    "legacy-docs_examples/callbacks/callbacks_test",
    "legacy-docs_examples/artifacts/artifacts_test",
    "legacy-docs_examples/events/events_test",
    "legacy-docs_examples/observability/telemetry_test",
    "legacy-docs_examples/deployment/launcher_test",
    "legacy-docs_examples/deployment/a2a_test",
    "legacy-docs_examples/evaluation/eval_test",
    "legacy-docs_examples/security/auth_test",
    "legacy-docs_examples/security/guardrails_test",
    "legacy-docs_examples/security/memory_test",
    "legacy-docs_examples/core/core_test",
    "legacy-docs_examples/core/runner_test",
    "legacy-docs_examples/cli/cli_test",
    "legacy-docs_examples/eval/eval_readme_test",
    "legacy-docs_examples/graph/graph_readme_test",
    "legacy-docs_examples/guardrail/guardrail_readme_test",
    "legacy-docs_examples/realtime/realtime_readme_test",
    "legacy-docs_examples/readme_validation",
    "legacy-docs_examples/models/providers_test",
    "legacy-docs_examples/extensions/skills_test",
    "legacy-docs_examples/extensions/plugins_test",
    "legacy-docs_examples/coding/code_test",
    "legacy-docs_examples/coding/cli_launcher_test",
    "legacy-docs_examples/tools/rag_usecases_test",
]

[workspace.package]
version = "0.5.0"
edition = "2024"
rust-version = "1.85.0"
license = "Apache-2.0"
authors = ["James Karanja Maina <james.karanja@zavora.ai>"]
homepage = "https://www.zavora.ai"
repository = "https://github.com/zavora-ai/adk-playground"

[workspace.dependencies]
# External dependencies
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
flate2 = "1.0"
tar = "0.4"

# ADK crates — published on crates.io
adk-core = "0.5.0"
adk-agent = "0.5.0"
adk-model = "0.5.0"
adk-tool = "0.5.0"
adk-runner = "0.5.0"
adk-server = "0.5.0"
adk-session = "0.5.0"
adk-artifact = "0.5.0"
adk-memory = "0.5.0"
adk-cli = "0.5.0"
adk-realtime = "0.5.0"
adk-graph = "0.5.0"
adk-browser = "0.5.0"
adk-eval = "0.5.0"
adk-ui = "0.5.0"
adk-telemetry = "0.5.0"
adk-guardrail = "0.5.0"
adk-auth = "0.5.0"
adk-plugin = "0.5.0"
adk-skill = "0.5.0"
adk-gemini = "0.5.0"
adk-code = "0.5.0"
adk-sandbox = "0.5.0"
adk-doc-audit = "0.5.0"
adk-rag = "0.5.0"
adk-audio = "0.5.0"
adk-deploy = "0.5.0"
adk-rust = { version = "0.5.0", default-features = false }

[profile.dev]
debug = 1
split-debuginfo = "packed"
incremental = true
opt-level = 0

[profile.dev.package."*"]
opt-level = 1
debug = false

[profile.release]
strip = true
opt-level = 3
lto = true
