[package]
name = "adk-playground-server"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "fs"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
