[package]
name = "cli_test"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "cli_test_basic"
path = "src/basic.rs"

[dependencies]
adk-cli = { workspace = true }
adk-agent = { workspace = true }
adk-model = { workspace = true, features = ["gemini"] }
adk-artifact = { workspace = true }
adk-core = { workspace = true }
tokio = { version = "1", features = ["full"] }
