[package]
name = "events_test"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "events_test_basic"
path = "src/basic.rs"

[[bin]]
name = "stream"
path = "src/stream.rs"

[dependencies]
adk-core = { workspace = true }
adk-session = { workspace = true }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
anyhow = "1"
