[package]
name = "graph_readme_test"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "graph_readme_test_basic"
path = "src/basic.rs"

[dependencies]
adk-graph = { workspace = true }
adk-agent = { workspace = true }
adk-model = { workspace = true, features = ["gemini"] }
adk-core = { workspace = true }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
