[package]
name = "telemetry_test"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "telemetry_test_basic"
path = "src/basic.rs"

[[bin]]
name = "spans"
path = "src/spans.rs"

[dependencies]
adk-telemetry = { workspace = true }
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
