[package]
name = "guardrails_test"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "guardrails_test_basic"
path = "src/basic.rs"

[dependencies]
adk-guardrail = { workspace = true, features = ["schema"] }
adk-core = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0"
