[package]
name = "browser_test"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
publish = false


[dependencies]
adk-rust = { workspace = true }
adk-browser = { workspace = true }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
anyhow = "1.0"

[[bin]]
name = "browser_test_basic"
path = "src/basic.rs"

[[bin]]
name = "filtered"
path = "src/filtered.rs"
