[package]
name = "function_tools_test"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
publish = false


[dependencies]
adk-rust = { workspace = true }
adk-tool = { workspace = true }
adk-core = { workspace = true }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
dotenvy = "0.15"
anyhow = "1.0"
rand = "0.8"
lazy_static = "1.4"

[[bin]]
name = "function_tools_test_basic"
path = "src/basic.rs"

[[bin]]
name = "with_schema"
path = "src/with_schema.rs"

[[bin]]
name = "multi_tool"
path = "src/multi_tool.rs"

[[bin]]
name = "context"
path = "src/context.rs"

[[bin]]
name = "long_running"
path = "src/long_running.rs"
