[package]
name = "plugins_test"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "plugins_test_basic"
path = "src/basic.rs"

[[bin]]
name = "plugins_test_builder"
path = "src/builder.rs"

[dependencies]
adk-plugin = { workspace = true }
adk-agent = { workspace = true }
adk-core = { workspace = true }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
