[package]
name = "skills_test"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "skills_test_discovery"
path = "src/discovery.rs"

[[bin]]
name = "skills_test_coordinator"
path = "src/coordinator.rs"

[[bin]]
name = "skills_test_injection"
path = "src/injection.rs"

[dependencies]
adk-skill = { workspace = true }
adk-core = { workspace = true }
async-trait = "0.1"
serde_json = "1"
tempfile = "3"
