[package]
name = "mistralrs_test"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
publish = false


[dependencies]
adk-mistralrs = { workspace = true }
adk-agent = { workspace = true }
adk-rust = { workspace = true }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

[[bin]]
name = "mistralrs_test_basic"
path = "src/basic.rs"

[[bin]]
name = "quantized"
path = "src/quantized.rs"

[[bin]]
name = "lora"
path = "src/lora.rs"

[[bin]]
name = "multimodel"
path = "src/multimodel.rs"

[[bin]]
name = "vision"
path = "src/vision.rs"
