[package]
name = "realtime_readme_test"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "realtime_readme_test_basic"
path = "src/basic.rs"

[dependencies]
adk-realtime = { workspace = true, features = ["openai"] }
adk-core = { workspace = true }
tokio = { version = "1", features = ["full"] }
