[package]
name = "sessions_test"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
publish = false

[dependencies]
adk-session = { workspace = true }
adk-core = { workspace = true }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"

[[bin]]
name = "sessions_test_basic"
path = "src/basic.rs"

[[bin]]
name = "state_scopes"
path = "src/state_scopes.rs"

[[bin]]
name = "state_example"
path = "src/state_example.rs"
