[package]
name = "rag_test"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rag_test_pipeline"
path = "src/pipeline.rs"

[[bin]]
name = "rag_test_chunkers"
path = "src/chunkers.rs"

[[bin]]
name = "rag_test_config"
path = "src/config.rs"

[[bin]]
name = "rag_test_reranker"
path = "src/reranker.rs"

[dependencies]
adk-rag = { workspace = true }
adk-core = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
